add all infos in the README